# AnimationEditor

./: CMakeLists.txt  README.md  conanfile.py
src/: AnimViewLevel.cpp  AnimViewLevel.h  CMakeLists.txt  ColliderViewer.cpp  ColliderViewer.h  GameData.h  GuidelineManager.cpp  GuidelineManager.h  GuidelineViewer.cpp  GuidelineViewer.h  ImTimelinePropertyInt.cpp  ImTimelinePropertyInt.h  LayerViewer.cpp  LayerViewer.h  main.cpp
src/Core/: AnimationManager.cpp  Application.cpp  Application.h  CMakeLists.txt  ColliderManager.cpp  ColliderManager.h  DBAccessor.cpp  DBAccessor.h  DBManager.cpp  DBManager.h  EngineAnimation.cpp  EngineAnimation.h  GuidelinesManager.cpp  GuidelinesManager.h  InputSystem.cpp  InputSystem.h  Level.cpp  Level.h  Renderer.cpp  Renderer.h  ResourceCounter.cpp  TimelineProperty.cpp  TimelineProperty.h  UsedFilesManager.cpp  UsedFilesManager.h  Utils.h  Vector2.h  Window.h
